--- a/modules/ROOT/pages/languages-guides/neo4j-javascript.adoc
+++ b/modules/ROOT/pages/languages-guides/neo4j-javascript.adoc
@@ -60,7 +60,28 @@ npm install neo4j-driver
 
 [source, javascript, subs=attributes]
 ----
-include::https://raw.githubusercontent.com/neo4j/neo4j-javascript-driver/4.0/test/examples.test.js[tag=language-guide-page,indent=0]
+const neo4j = require('neo4j-driver')
+
+    const driver = neo4j.driver(uri, neo4j.auth.basic(user, password))
+    const session = driver.session()
+    const personName = 'Alice'
+
+    try {
+      const result = await session.run(
+        'CREATE (a:Person {name: $name}) RETURN a',
+        { name: personName }
+      )
+
+      const singleRecord = result.records[0]
+      const node = singleRecord.get(0)
+
+      console.log(node.properties.name)
+    } finally {
+      await session.close()
+    }
+
+    // on application exit:
+    await driver.close()
 ----
 
 
