Revert "fix link to data-modeling (#105)"
This reverts commit 1c49f722faf3a9476e4a9f8565e6c5493f99abf5.

--- a/modules/ROOT/pages/appendix/graphdb-concepts/graphdb-vs-rdbms.adoc
+++ b/modules/ROOT/pages/appendix/graphdb-concepts/graphdb-vs-rdbms.adoc
@@ -83,7 +83,7 @@ That's all we need - a single hop with no lookups involved.
 
 [TIP]
 ====
-More information on this topic can be found in link:/developer/data-modeling/[Graph Data Modeling].
+More information on this topic can be found in the https://neo4j.com/docs/getting-started/current/data-modeling/[Data Modeling section].
 ====
 
 
